@@ -1,13 +1,13 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
- * Copyright (C) 2004, 2005, 2006, 2007, 2009, 2010, 2011 VMware, Inc.
- * 
+ * Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Zimbra, Inc.
+ *
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
  * ***** END LICENSE BLOCK *****
@@ -22,6 +22,7 @@ import java.util.List;
 import org.apache.lucene.document.DateTools;
 import org.apache.lucene.document.Document;
 
+import com.google.common.base.Objects;
 import com.zimbra.common.service.ServiceException;
 import com.zimbra.cs.mailbox.Mailbox;
 import com.zimbra.cs.mailbox.MailItem;
@@ -32,7 +33,6 @@ import com.zimbra.cs.mime.ParsedAddress;
 
 import com.zimbra.common.util.Log;
 import com.zimbra.common.util.LogFactory;
-import com.zimbra.common.util.ZimbraLog;
 
 /**
  * Efficient Read-access to a {@link Message} returned from a query. APIs mirror
@@ -44,21 +44,20 @@ import com.zimbra.common.util.ZimbraLog;
  */
 public final class MessageHit extends ZimbraHit {
 
-    private static Log mLog = LogFactory.getLog(MessageHit.class);
+    private static final Log LOG = LogFactory.getLog(MessageHit.class);
 
-    private Document mDoc = null;
-    private Message mMessage = null;
-    private List<MessagePartHit> mMatchedParts = null;
-    private int mConversationId = 0;
-    private int mMessageId = 0;
-    private ConversationHit mConversationHit = null;
+    private Document document = null;
+    private Message message = null;
+    private List<MessagePartHit> matchedParts = null;
+    private int conversationId = 0;
+    private int messageId = 0;
+    private ConversationHit conversationHit = null;
 
-    MessageHit(ZimbraQueryResultsImpl results, Mailbox mbx, int mailItemId, Document doc, Message message) {
-        super(results, mbx);
-        assert(mailItemId != 0);
-        mMessageId = mailItemId;
-        mDoc = doc;
-        mMessage = message;
+    MessageHit(ZimbraQueryResultsImpl results, Mailbox mbx, int id, Message msg, Document doc, Object sortValue) {
+        super(results, mbx, sortValue);
+        messageId = id;
+        message = msg;
+        document = doc;
     }
 
     int getFolderId() throws ServiceException {
@@ -67,109 +66,41 @@ public final class MessageHit extends ZimbraHit {
 
     @Override
     public int getConversationId() throws ServiceException {
-        if (mConversationId == 0) {
-            mConversationId = getMessage().getConversationId();
+        if (conversationId == 0) {
+            conversationId = getMessage().getConversationId();
         }
-        return mConversationId;
-    }
-
-    @Override
-    public long getDate() throws ServiceException {
-        if (mCachedDate == -1) {
-            if (mMessage == null && mDoc != null) {
-                String sortDate = mDoc.get(LuceneFields.L_SORT_DATE);
-                if (sortDate != null) {
-                    try {
-                        mCachedDate = DateTools.stringToTime(sortDate);
-                        if (mCachedDate > 0) {
-                            return mCachedDate;
-                        } else { // fall back to DB date
-                            ZimbraLog.index_search.warn("Index corrupted, re-indexing is recommended: id=%d,date=%s",
-                                    mMessageId, sortDate);
-                        }
-                    } catch (ParseException e) { // fall back to DB date
-                        ZimbraLog.index_search.warn("Index corrupted, re-indexing is recommended: id=%d,date=%s",
-                                mMessageId, sortDate, e);
-                    }
-                }
-            }
-            mCachedDate = getMessage().getDate();
-            if (mCachedDate <= 0) {
-                ZimbraLog.index_search.error("Invalid sort-date from DB id=%d,date=%d", mMessageId, mCachedDate);
-            }
-        }
-        return mCachedDate;
+        return conversationId;
     }
 
     public void addPart(MessagePartHit part) {
-        if (mMatchedParts == null)
-            mMatchedParts = new ArrayList<MessagePartHit>();
-
-        if (!mMatchedParts.contains(part)) {
-            mMatchedParts.add(part);
+        if (matchedParts == null) {
+            matchedParts = new ArrayList<MessagePartHit>();
+        }
+        if (!matchedParts.contains(part)) {
+            matchedParts.add(part);
         }
     }
 
     public List<MessagePartHit> getMatchedMimePartNames() {
-        return mMatchedParts;
+        return matchedParts;
     }
 
     @Override
     public int getItemId() {
-        return mMessageId;
-    }
-
-    public byte getItemType() {
-        return MailItem.TYPE_MESSAGE;
+        return messageId;
     }
 
     @Override
     public String toString() {
-        int convId = 0;
-        boolean convIdUnknown = false;
         try {
-            // don't load the message from the DB just to get the convid!
-            if (mConversationId == 0 && mMessage == null) {
-                convIdUnknown = true;
-            } else {
-                convId = getConversationId();
-            }
+            return Objects.toStringHelper(this)
+                .add("id", getItemId())
+                .add("conv", getConversationId())
+                .addValue(super.toString())
+                .toString();
         } catch (ServiceException e) {
-            e.printStackTrace();
+            return e.toString();
         }
-        long size = 0;
-        try {
-            if (mCachedSize == -1 && mMessage == null) {
-                size = -1;
-            } else {
-                size = getSize();
-            }
-        } catch (ServiceException e) {
-            e.printStackTrace();
-        }
-        if (mMessage == null) {
-            return "MS: " + this.getItemId();
-        } else {
-            return "MS: " + super.toString() +
-                " C" + (convIdUnknown ? "?" : convId) +
-                " M" + Integer.toString(getItemId()) +
-                " S="+size;
-        }
-    }
-
-    @Override
-    public long getSize() throws ServiceException {
-        if (mCachedSize == -1) {
-            if (mMessage == null && mDoc != null) {
-                String sizeStr = mDoc.get(LuceneFields.L_SORT_SIZE);
-                if (sizeStr != null) {
-                    mCachedSize = Long.parseLong(sizeStr);
-                    return mCachedSize;
-                }
-            }
-            mCachedSize = getMessage().getSize();
-        }
-        return mCachedSize;
     }
 
     public boolean isTagged(Tag tag) throws ServiceException {
@@ -178,12 +109,12 @@ public final class MessageHit extends ZimbraHit {
 
     @Override
     void setItem(MailItem item) {
-        mMessage = (Message) item;
+        message = (Message) item;
     }
 
     @Override
     boolean itemIsLoaded() {
-        return mMessage != null;
+        return message != null;
     }
 
     @Override
@@ -192,41 +123,31 @@ public final class MessageHit extends ZimbraHit {
     }
 
     public Message getMessage() throws ServiceException {
-        if (mMessage == null) {
+        if (message == null) {
             Mailbox mbox = MailboxManager.getInstance().getMailboxById(
                     getMailbox().getId());
             int messageId = getItemId();
             try {
-                mMessage = mbox.getMessageById(null, messageId);
+                message = mbox.getMessageById(null, messageId);
             } catch (ServiceException e) {
-                mLog.error("Error getting message id=" + messageId +
-                        " from mailbox " + mbox.getId(), e);
-                e.printStackTrace();
+                LOG.error("Failed to get message mbox=%d,id=%d", mbox.getId(), messageId, e);
                 throw e;
             }
         }
-        return mMessage;
-    }
-
-    @Override
-    public String getSubject() throws ServiceException {
-        if (mCachedSubj == null) {
-            mCachedSubj = getMessage().getSortSubject();
-        }
-        return mCachedSubj;
+        return message;
     }
 
     @Override
     public String getName() throws ServiceException {
-        if (mCachedName == null) {
-            mCachedName = getSender();
+        if (cachedName == null) {
+            cachedName = getSender();
         }
-        return mCachedName;
+        return cachedName;
     }
 
     public long getDateHeader() throws ServiceException {
-        if (mMessage == null && mDoc != null) {
-            String dateStr = mDoc.get(LuceneFields.L_SORT_DATE);
+        if (message == null && document != null) {
+            String dateStr = document.get(LuceneFields.L_SORT_DATE);
             if (dateStr != null) {
                 try {
                     return DateTools.stringToTime(dateStr);
@@ -245,14 +166,14 @@ public final class MessageHit extends ZimbraHit {
     }
 
     /**
-     * @return a ConversationResult corresponding to this message's conversation
+     * Returns a {@link ConversationHit} corresponding to this message's conversation.
      */
     public ConversationHit getConversationResult() throws ServiceException {
-        if (mConversationHit == null) {
-            Integer cid = new Integer(getConversationId());
-            mConversationHit = getResults().getConversationHit(getMailbox(), cid);
-            mConversationHit.addMessageHit(this);
+        if (conversationHit == null) {
+            Integer cid = Integer.valueOf(getConversationId());
+            conversationHit = getResults().getConversationHit(getMailbox(), cid, sortValue);
+            conversationHit.addMessageHit(this);
         }
-        return mConversationHit;
+        return conversationHit;
     }
 }
