@@ -1,13 +1,13 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
- * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011 VMware, Inc.
- * 
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010 Zimbra, Inc.
+ *
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
  * ***** END LICENSE BLOCK *****
@@ -31,6 +31,7 @@ import java.util.Map;
 
 import javax.activation.DataSource;
 
+import com.zimbra.cs.mailbox.MailboxOperation;
 import com.zimbra.cs.redolog.RedoLogInput;
 import com.zimbra.cs.redolog.RedoLogOutput;
 import com.zimbra.cs.store.Blob;
@@ -47,17 +48,16 @@ public class StoreIncomingBlob extends RedoableOp {
     private RedoableOpData mData;
     private List<Integer> mMailboxIdList;
 
-    public StoreIncomingBlob()  {}
+    public StoreIncomingBlob()  {
+        super(MailboxOperation.StoreIncomingBlob);
+    }
 
     public StoreIncomingBlob(String digest, int msgSize, List<Integer> mboxIdList) {
+        this();
         setMailboxId(MAILBOX_ID_ALL);
         mDigest = digest != null ? digest : "";
         mMsgSize = msgSize;
         mMailboxIdList = mboxIdList;
-    }
-
-    @Override public int getOpCode() {
-        return OP_STORE_INCOMING_BLOB;
     }
 
     public List<Integer> getMailboxIdList() {
@@ -132,9 +132,9 @@ public class StoreIncomingBlob extends RedoableOp {
                 for (int i = 0; i < listLen; i++) {
                     // still writing and reading long mailbox IDs for backwards compatibility, even though they're ints again
                     if (getVersion().atLeast(1, 26)) {
-                        list.add(new Integer((int) in.readLong()));
+                        list.add(Integer.valueOf((int) in.readLong()));
                     } else {
-                        list.add(new Integer(in.readInt()));
+                        list.add(Integer.valueOf(in.readInt()));
                     }
                 }
                 mMailboxIdList = list;
@@ -176,7 +176,7 @@ public class StoreIncomingBlob extends RedoableOp {
         boolean success = false;
         try {
             boolean compressed = mData.getLength() != mMsgSize;
-            Blob blob = StoreManager.getInstance().storeIncoming(mData.getInputStream(), null, compressed);
+            Blob blob = StoreManager.getInstance().storeIncoming(mData.getInputStream(), compressed);
             if (compressed) {
                 blob.setDigest(mDigest).setRawSize(mMsgSize).setCompressed(compressed);
             }
