@@ -1,13 +1,13 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
- * Copyright (C) 2009, 2010, 2011 VMware, Inc.
- * 
+ * Copyright (C) 2009, 2010 Zimbra, Inc.
+ *
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
  * ***** END LICENSE BLOCK *****
@@ -36,59 +36,59 @@ import com.zimbra.common.util.CliUtil;
 import com.zimbra.cs.account.Account;
 import com.zimbra.cs.account.AccountServiceException;
 import com.zimbra.cs.account.Provisioning;
-import com.zimbra.cs.account.Provisioning.AccountBy;
+import com.zimbra.common.account.Key.AccountBy;
 import com.zimbra.cs.httpclient.URLUtil;
 
 public class GalSyncAccountUtil {
 	private static final int CREATE_ACCOUNT = 10;
-	private static final int CREATE_DATASOURCE = 11;  // CREATE_DATASOURCE is just an alias of CREATE_ACCOUNT, see https://bugzilla.zimbra.com/show_bug.cgi?id=41322#c2
+	private static final int ADD_DATASOURCE = 11;
 	private static final int DELETE_ACCOUNT = 12;
 	private static final int TRICKLE_SYNC = 13;
 	private static final int FULL_SYNC = 14;
 	private static final int FORCE_SYNC = 15;
 
 	private static final String CREATE_ACCOUNT_COMMAND = "createaccount";
-	private static final String CREATE_DATASOURCE_COMMAND = "createdatasource";
+	private static final String ADD_DATASOURCE_COMMAND = "adddatasource";
 	private static final String DELETE_ACCOUNT_COMMAND = "deleteaccount";
 	private static final String TRICKLE_SYNC_COMMAND = "tricklesync";
 	private static final String FULL_SYNC_COMMAND = "fullsync";
 	private static final String FORCE_SYNC_COMMAND = "forcesync";
-	
+
 	private static Map<String,Integer> mCommands;
-	
+
 	private static void usage() {
 		System.out.println("zmgsautil: {command}");
-		System.out.println("\tcreateAccount -a {account-name} -n {datasource-name} --domain {domain-name} -t zimbra|ldap [-f {folder-name}] [-p {polling-interval}]");
-		System.out.println("\tcreateDataSource -a {account-name} -n {datasource-name} --domain {domain-name} -t zimbra|ldap [-f {folder-name}] [-p {polling-interval}]");
+		System.out.println("\tcreateAccount -a {account-name} -n {datasource-name} --domain {domain-name} -t zimbra|ldap -s {server} [-f {folder-name}] [-p {polling-interval}]");
+		System.out.println("\taddDataSource -a {account-name} -n {datasource-name} --domain {domain-name} -t zimbra|ldap [-f {folder-name}] [-p {polling-interval}]");
 		System.out.println("\tdeleteAccount [-a {account-name} | -i {account-id}]");
 		System.out.println("\ttrickleSync [-a {account-name} | -i {account-id}] [-d {datasource-id}] [-n {datasource-name}]");
 		System.out.println("\tfullSync [-a {account-name} | -i {account-id}] [-d {datasource-id}] [-n {datasource-name}]");
 		System.out.println("\tforceSync [-a {account-name} | -i {account-id}] [-d {datasource-id}] [-n {datasource-name}]");
 		System.exit(1);
 	}
-	
+
 	private static void addCommand(String cmd, int cmdId) {
-		mCommands.put(cmd, new Integer(cmdId));
+		mCommands.put(cmd, Integer.valueOf(cmdId));
 	}
-	
+
 	private static int lookupCmd(String cmd) {
-		Integer i = (Integer) mCommands.get(cmd.toLowerCase());
+		Integer i = mCommands.get(cmd.toLowerCase());
 		if (i == null) {
 			usage();
 		}
 		return i.intValue();
 	}
-	
+
 	private static void setup() {
 		mCommands = new HashMap<String,Integer>();
 		addCommand(CREATE_ACCOUNT_COMMAND, CREATE_ACCOUNT);
-		addCommand(CREATE_DATASOURCE_COMMAND, CREATE_DATASOURCE);
+		addCommand(ADD_DATASOURCE_COMMAND, ADD_DATASOURCE);
 		addCommand(DELETE_ACCOUNT_COMMAND, DELETE_ACCOUNT);
 		addCommand(TRICKLE_SYNC_COMMAND, TRICKLE_SYNC);
 		addCommand(FULL_SYNC_COMMAND, FULL_SYNC);
 		addCommand(FORCE_SYNC_COMMAND, FORCE_SYNC);
 	}
-	
+
 	private String mUsername;
 	private String mPassword;
 	private String mAdminURL;
@@ -119,7 +119,8 @@ public class GalSyncAccountUtil {
 	private String mDataSourceName;
 	private boolean mFullSync;
 	private boolean mForceSync;
-	
+	private String mServer;
+
 	private void syncGalAccount() throws ServiceException, IOException {
 		checkArgs();
         mTransport = null;
@@ -139,14 +140,14 @@ public class GalSyncAccountUtil {
     			ds.addAttribute(AdminConstants.A_FULLSYNC, "TRUE");
     		if (mForceSync)
     			ds.addAttribute(AdminConstants.A_RESET, "TRUE");
-    			
+
     		mTransport.invoke(req);
         } finally {
             if (mTransport != null)
                 mTransport.shutdown();
-        }                        
+        }
 	}
-	private Element createGalSyncAccount(String accountName, String dsName, String domain, String type, String folder, String pollingInterval) throws ServiceException, IOException {
+	private Element createGalSyncAccount(String accountName, String dsName, String domain, String type, String folder, String pollingInterval, String mailHost) throws ServiceException, IOException {
         mTransport = null;
         try {
             mTransport = new SoapHttpTransport(mAdminURL);
@@ -158,17 +159,42 @@ public class GalSyncAccountUtil {
     		req.addAttribute(AdminConstants.A_TYPE, type);
     		if (folder != null)
         		req.addAttribute(AdminConstants.E_FOLDER, folder);
+    		req.addAttribute(AdminConstants.A_SERVER, mailHost);
     		Element acct = req.addElement(AdminConstants.E_ACCOUNT);
     		acct.addAttribute(AdminConstants.A_BY, AccountBy.name.name());
     		acct.setText(accountName);
     		if (pollingInterval != null)
     			req.addElement(AdminConstants.E_A).addAttribute(AdminConstants.A_N, Provisioning.A_zimbraDataSourcePollingInterval).setText(pollingInterval);
-    			
+
     		return mTransport.invokeWithoutSession(req);
         } finally {
             if (mTransport != null)
                 mTransport.shutdown();
-        }                        
+        }
+	}
+	private Element addGalSyncDataSource(String accountName, String dsName, String domain, String type, String folder, String pollingInterval) throws ServiceException, IOException {
+	    mTransport = null;
+	    try {
+	        mTransport = new SoapHttpTransport(mAdminURL);
+	        auth();
+	        mTransport.setAuthToken(mAuth);
+	        XMLElement req = new XMLElement(AdminConstants.ADD_GAL_SYNC_DATASOURCE_REQUEST);
+	        req.addAttribute(AdminConstants.A_NAME, dsName);
+	        req.addAttribute(AdminConstants.A_DOMAIN, domain);
+	        req.addAttribute(AdminConstants.A_TYPE, type);
+	        if (folder != null)
+	            req.addAttribute(AdminConstants.E_FOLDER, folder);
+	        Element acct = req.addElement(AdminConstants.E_ACCOUNT);
+	        acct.addAttribute(AdminConstants.A_BY, AccountBy.name.name());
+	        acct.setText(accountName);
+	        if (pollingInterval != null)
+	            req.addElement(AdminConstants.E_A).addAttribute(AdminConstants.A_N, Provisioning.A_zimbraDataSourcePollingInterval).setText(pollingInterval);
+
+	        return mTransport.invokeWithoutSession(req);
+	    } finally {
+	        if (mTransport != null)
+	            mTransport.shutdown();
+	    }
 	}
 	private Element deleteGalSyncAccount(String name, String id) throws ServiceException, IOException {
         mTransport = null;
@@ -193,7 +219,7 @@ public class GalSyncAccountUtil {
         } finally {
             if (mTransport != null)
                 mTransport.shutdown();
-        }                        
+        }
 	}
 	private void setAccountId(String aid) {
 		mAccountId = aid;
@@ -220,7 +246,7 @@ public class GalSyncAccountUtil {
 		Element resp = mTransport.invoke(req);
 		mAuth = new ZAuthToken(resp.getElement(AccountConstants.E_AUTH_TOKEN), true);
 	}
-	
+
 	public static void main(String[] args) throws Exception {
 		if (args.length < 1)
 			usage();
@@ -235,6 +261,7 @@ public class GalSyncAccountUtil {
         options.addOption("f", "folder", true, "folder id");
         options.addOption("p", "polling", true, "polling interval");
         options.addOption("t", "type", true, "gal type");
+        options.addOption("s", "server", true, "mailhost");
         options.addOption("h", "help", true, "help");
         CommandLine cl = null;
         boolean err = false;
@@ -273,18 +300,30 @@ public class GalSyncAccountUtil {
 				cli.syncGalAccount();
 				break;
 			case CREATE_ACCOUNT:
-			case CREATE_DATASOURCE:    
 				String acctName = cl.getOptionValue('a');
 				String dsName = cl.getOptionValue('n');
 				String domain = cl.getOptionValue('x');
 				String type = cl.getOptionValue('t');
 				String folderName = cl.getOptionValue('f');
 				String pollingInterval = cl.getOptionValue('p');
-				if (acctName == null || dsName == null || type == null || type.compareTo("zimbra") != 0 && type.compareTo("ldap") != 0)
+				String mailHost = cl.getOptionValue('s');
+				if (acctName == null || mailHost == null || dsName == null || type == null || type.compareTo("zimbra") != 0 && type.compareTo("ldap") != 0)
 					usage();
-				for (Element account : cli.createGalSyncAccount(acctName, dsName, domain, type, folderName, pollingInterval).listElements(AdminConstants.A_ACCOUNT))
+				for (Element account : cli.createGalSyncAccount(acctName, dsName, domain, type, folderName, pollingInterval, mailHost).listElements(AdminConstants.A_ACCOUNT))
 					System.out.println(account.getAttribute(AdminConstants.A_NAME)+"\t"+account.getAttribute(AdminConstants.A_ID));
 				break;
+	        case ADD_DATASOURCE:
+	            acctName = cl.getOptionValue('a');
+	            dsName = cl.getOptionValue('n');
+	            domain = cl.getOptionValue('x');
+	            type = cl.getOptionValue('t');
+	            folderName = cl.getOptionValue('f');
+	            pollingInterval = cl.getOptionValue('p');
+	            if (acctName == null || dsName == null || type == null || type.compareTo("zimbra") != 0 && type.compareTo("ldap") != 0)
+	                usage();
+	            for (Element account : cli.addGalSyncDataSource(acctName, dsName, domain, type, folderName, pollingInterval).listElements(AdminConstants.A_ACCOUNT))
+	                System.out.println(account.getAttribute(AdminConstants.A_NAME)+"\t"+account.getAttribute(AdminConstants.A_ID));
+	            break;
 			case DELETE_ACCOUNT:
 				String name = cl.getOptionValue('a');
 				String id = cl.getOptionValue('i');
